Fixed Trenders spacing

--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@ form {
 .trenders {
     width: 100%;
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr 5fr;
     justify-self: start;
     margin: 10px;
 }
